# acmegen

./: Cargo.toml  Dockerfile
.github/workflows/: binary-publish.yaml  docker-publish.yaml
src/: lib.rs  store.rs
